contact list updated! some page modification done.

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 </p>
 				<hr class="my-4">
 				<p>To know more about me and my work please follow the link bellow.</p>
-				<a class="btn btn-outline-dark btn-round" href="#" role="button">
+				<button class="btn btn-outline-dark btn-round" href="#" role="button" data-toggle="modal" data-target="#ResumeModal">
                     Learn more...
-                </a>
+                </button>
 			</div>
 		</div>
 	</section>
@@ -347,6 +347,15 @@
                 <!-- single gallery item-->
                 <div class="col-4 col-md-3 col-lg-2 col-xl-2 Tools">
                     <div class="gal-detail thumb">
+                        <a href="resources/img/tech/sublime-icon.png" class="image-popup" title="Sublime Text">
+                            <img src="resources/img/tech/sublime-icon.png" class="img-fluid" alt="work-thumbnail">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 Tools">
+                    <div class="gal-detail thumb">
                         <a href="resources/img/tech/phpStorm.png" class="image-popup" title="PHP Storm">
                             <img src="resources/img/tech/phpStorm.png" class="img-fluid" alt="work-thumbnail">
                         </a>
@@ -448,6 +457,11 @@
             </div>
             
         </div><!--.row-->
+        
+        <h6 class="text-center">
+            <a href="##" class="">show more&raquo;</a>
+        </h6>
+
         </div><!--.container-->
     </section>
 
@@ -494,7 +508,7 @@
                         <li>Web Developer's Team</li>
                         <li>Graphics Designer Team</li>
                         <li>Logo Designer Team</li>
-                        <li>SEO & Digital Marketer Team</li>
+                        <li>SEO & SMM Expert Team</li>
                         <li>IT Support & VA Team</li>
                     </ul>
                 </div>
@@ -521,8 +535,8 @@
                     <a target="_blank" href="https://fb.com/sysamin" class="btn btn-block btn-outline-dark btn-social">
                         Follow me on <i class="fa fa-facebook-square fa-lg"></i>
                     </a>
-                    <a target="_blank" href="https://plus.google.com/+aminulislamMuhammad" class="btn btn-block btn-outline-dark btn-social">
-                        Follow me on <i class="fa fa-google-plus fa-lg"></i>
+                    <a target="_blank" href="https://www.linkedin.com/in/aminulislamm/" class="btn btn-block btn-outline-dark btn-social">
+                        Follow me on <i class="fa fa-linkedin fa-lg"></i>
                     </a>
 
                 </div>
@@ -530,6 +544,30 @@
         </div>
     </section>
 
+<!-- Button trigger modal
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ResumeModal">
+  Resume
+</button> -->
+
+<!-- Modal -->
+<div class="modal fade" id="ResumeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Resume: Aminul Islam</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <embed src="resources/files/Resume_Aminul_Islam.pdf" width="100%" height="500px"></embed>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 	<footer class="row-fluid">
@@ -551,8 +589,8 @@
 		</div>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!--<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>-->
+	<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js" integrity="sha256-wk7QMTzYE7BJvko9BsywPzRmKzhCtIQKTuN6/B9sRmw=" crossorigin="anonymous"></script>
