--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link rel="stylesheet" href="resources/bootfix.css">
 
-    <!--PLUGIN-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+    <!--Plugin-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" integrity="sha256-PZLhE6wwMbg4AB3d35ZdBF9HD/dI/y4RazA3iRDurss=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.6/css/swiper.min.css" integrity="sha256-/MUsbxMVqlXbxtYsVUN7Scrbq8Hd5Up+BntZl2TuMLQ=" crossorigin="anonymous" />
     <!--<link rel="stylesheet" href="resources/flag-icon-css-master/css/flag-icon.min.css">-->
@@ -99,13 +102,13 @@
 	<section id="about" class="row-fluid">
 		<div class="jumbotron">
 			<div class="container text-center">
-				<img id="my-thumb" class="rounded-circle" src="./resources/img/an-amin.png" alt="Aminul Islam">
-				<h1 class="display-4">Hello world,</h1>
-				<p class="lead">
+				<img id="my-thumb" class="rounded-circle" src="./resources/img/amin.png" alt="Aminul Islam">
+				<h1 class="display-4 font-consolas">{Hello world}</h1>
+				<p class="lead font-consolas">
                     I am <i>Aminul Islam</i>, a web developer currently live in Dhaka, Bangladesh.
                 </p>
 				<hr class="my-4">
-				<p>To know more about me and my work please follow the link bellow.</p>
+				<p class="font-consolas">To know more about me and my work please press the button bellow.</p>
 				<button class="btn btn-outline-dark btn-round" href="#" role="button" data-toggle="modal" data-target="#ResumeModal">
                     Learn more...
                 </button>
@@ -581,7 +584,7 @@
                     </ul>
 
 					<p class="">
-						&copy;2015-<big>&#x221e;</big>, all right reserved by <i>Aminul Islam</i>
+						&copy;<span id="copyright_date">2015-<big>&#x221e;</big></span>, all right reserved by <i>Aminul Islam</i>
 					</p>
 					
 				</div>
