--- a/index.html
+++ b/index.html
@@ -296,6 +296,15 @@
                 <!-- single gallery item-->
                 <div class="col-4 col-md-3 col-lg-2 col-xl-2 Platform-n-Env">
                     <div class="gal-detail thumb">
+                        <a href="resources/img/tech/windows.png" class="image-popup" title="Windows">
+                            <img src="resources/img/tech/windows.png" class="img-fluid" alt="work-thumbnail">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 Platform-n-Env">
+                    <div class="gal-detail thumb">
                         <a href="resources/img/tech/apache-http-server.png" class="image-popup" title="APACHE http server">
                             <img src="resources/img/tech/apache-http-server.png" class="img-fluid" alt="work-thumbnail">
                         </a>
