--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" href="./resources/img/an-amin.jpg">
-    <title>Aminul Islam</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>Hello World...</title>
+    <meta name="description" content="I am Aminul Islam, a Full Stack Web Developer.">
+    <meta name="keywords" content="hello world, web, developer, bangladesh, portfolio, aminul, islam">
 
     <meta name="robots" content="">
-    <meta name="ROBOTS" content="">
     <meta name="revisit-after" content="">
 
     <meta name="copyright" content="Aminul Islam">
@@ -17,22 +16,20 @@
     <meta name="web_author" content="Aminul Islam">
 
     <!-- Twitter Card data -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@publisher_handle">
-    <meta name="twitter:title" content="Page Title">
-    <meta name="twitter:description" content="Page description less than 200 characters">
-    <meta name="twitter:creator" content="@author_handle">
+    <meta name="twitter:title" content="Hello World...">
+    <meta name="twitter:description" content="I am Aminul Islam, a Full Stack Web Developer.">
+    <meta name="twitter:creator" content="Aminul Islam">
     <!-- Twitter Summary card images must be at least 120x120px -->
-    <meta name="twitter:image" content="http://www.example.com/image.jpg">
+    <meta name="twitter:image" content="./resources/img/an-amin.jpg">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Title Here" />
+    <meta property="og:title" content="Hello World..." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://www.example.com/" />
-    <meta property="og:image" content="http://example.com/image.jpg" />
-    <meta property="og:description" content="Description Here" />
-    <meta property="og:site_name" content="Site Name, i.e. Moz" />
-    <meta property="fb:admins" content="Facebook numeric ID" /> 
+    <meta property="og:url" content="./" />
+    <meta property="og:image" content="./resources/img/an-amin.jpg" />
+    <meta property="og:description" content="I am Aminul Islam, a Full Stack Web Developer." />
+    <meta property="og:site_name" content="Aminul Islam" />
+    <meta property="fb:admins" content="160990734741710" /> 
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link rel="stylesheet" href="resources/bootfix.css">
@@ -105,12 +102,23 @@
 				<img id="my-thumb" class="rounded-circle" src="./resources/img/amin.png" alt="Aminul Islam">
 				<h1 class="display-4 font-consolas">{Hello world}</h1>
 				<p class="lead font-consolas">
-                    I am <i>Aminul Islam</i>, a web developer currently live in Dhaka, Bangladesh.
+                    I am <i>Aminul Islam</i>, a 'Full Stack Web Developer' currently living in Dhaka, Bangladesh.
                 </p>
 				<hr class="my-4">
-				<p class="font-consolas">To know more about me and my work please press the button bellow.</p>
+				<p class="font-consolas">
+                    From my childhood I always think to do something what I'll really love & enjoy. Then I learned about programming. Playing around with it I really fall in love of it. Then I took this as my profession.
+                </p>
+                <p>
+                    I prefer CLI to GUI and too lazy to hold the mouse! I love Linux and enjoy working in Terminal.
+                </p>
+                <p>
+                    I love to learn. Learning about new technology, science, history and arts are my favourite hobbies.
+                </p>
+                <p>
+                    <small>To know more about me you can go through my resume with the button bellow.</small>
+                </p>
 				<button class="btn btn-outline-dark btn-round" href="#" role="button" data-toggle="modal" data-target="#ResumeModal">
-                    Learn more...
+                    &nbsp;<i class="fa fa-file-o"></i> My Resume&nbsp;
                 </button>
 			</div>
 		</div>
@@ -486,7 +494,7 @@
                     <br><br>
 				</div>
 				<div class="col-md-6">
-					<h2 class=""><i class="fa fa-wrench fa-lg"></i> My Services</h2>
+					<h2 class="ul-h"><i class="fa fa-wrench fa-lg"></i> My Services</h2>
 					<ul>
 						<li>UI & UX Design</li>
 						<li>Web Design</li>
@@ -513,11 +521,11 @@
                     <img src="resources/img/gif/team.gif" alt="" width="100%">
                 </div>
                 <div class="col-md-6 order-md-1">
-                    <h2><i class="fa fa-users fa-lg"></i> My Team</h2>
+                    <h2 class="ul-h"><i class="fa fa-users fa-lg"></i> My Team</h2>
                     <ul>
-                        <li>UI\UX Designer's Team</li>
-                        <li>Web Designer's Team</li>
-                        <li>Web Developer's Team</li>
+                        <li>UI\UX Designer Team</li>
+                        <li>Web Designer Team</li>
+                        <li>Web Developer Team</li>
                         <li>Graphics Designer Team</li>
                         <li>Logo Designer Team</li>
                         <li>SEO & SMM Expert Team</li>
@@ -601,7 +609,7 @@
 		</div>
 	</footer>
 
-	<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
@@ -610,7 +618,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.6/js/swiper.min.js" integrity="sha256-NCAKIW9CtzSpcjpTZ2RbtRfDHgNrQuK/akgMYogPwSw=" crossorigin="anonymous"></script>
     <script src="resources/plugins/init.js"></script>
     <!--<script src="resources/ajax/data.js"></script>-->
-	<script src="resources/script.js"></script>
+    <script src="resources/script.js"></script>
+	<script src="resources/ng-script.js"></script>
     <script type="text/javascript"></script>
 </body>
 </html>
