wp updated, codestar, python added

--- a/index.html
+++ b/index.html
@@ -206,6 +206,15 @@
                 <!-- single gallery item-->
                 <div class="col-4 col-md-3 col-lg-2 col-xl-2 CMS-n-EMS">
                     <div class="gal-detail thumb">
+                        <a href="resources/img/tech/codestar.png" class="image-popup" title="CodeStar Option Framework">
+                            <img src="resources/img/tech/codestar.png" class="img-fluid" alt="work-thumbnail">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 CMS-n-EMS">
+                    <div class="gal-detail thumb">
                         <a href="resources/img/tech/drupal.png" class="image-popup" title="Drupal">
                             <img src="resources/img/tech/drupal.png" class="img-fluid" alt="work-thumbnail">
                         </a>
@@ -262,6 +271,15 @@
                     <div class="gal-detail thumb">
                         <a href="resources/img/tech/php.jpg" class="image-popup" title="PHP: Hypertext Processor">
                             <img src="resources/img/tech/php.jpg" class="img-fluid" alt="work-thumbnail">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 Language-n-Framework">
+                    <div class="gal-detail thumb">
+                        <a href="resources/img/tech/python-logo.png" class="image-popup" title="Python">
+                            <img src="resources/img/tech/python-logo.png" class="img-fluid" alt="work-thumbnail">
                         </a>
                     </div>
                 </div><!-- single gallery item-->
