--- a/index.html
+++ b/index.html
@@ -616,9 +616,11 @@
         </div><!--.row-->
         
         <h6 class="text-center">
-            visit more projects in 
-            <a target="_blank" href="https://github.com/an-amin">GitHub</a> & 
-            <a target="_blank" href="https://gitlab.com/aminulislam">GitLab</a> &raquo;
+            visit more projects in... 
+            <br>
+            <a target="_blank" href="https://github.com/an-amin">Git Hub</a> | 
+            <a target="_blank" href="https://gitlab.com/aminulislam">Git Lab</a> | 
+            <a target="_blank" href="https://bitbucket.org/sysamin">Bit Bucket</a> &raquo;
         </h6>
 
         </div><!--.container-->
