--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
                 <!-- single gallery item-->
                 <div class="col-4 col-md-3 col-lg-2 col-xl-2 CMS-n-EMS">
                     <div class="gal-detail thumb">
-                        <a href="resources/img/tech/magento.png" class="image-popup" title="Magento">
-                            <img src="resources/img/tech/magento.png" class="img-fluid" alt="Magento">
+                        <a href="resources/img/tech/magento.jpg" class="image-popup" title="Magento">
+                            <img src="resources/img/tech/magento.jpg" class="img-fluid" alt="Magento">
                         </a>
                     </div>
                 </div><!-- single gallery item-->
@@ -289,6 +289,24 @@
                     <div class="gal-detail thumb">
                         <a href="resources/img/tech/python-logo.png" class="image-popup" title="Python">
                             <img src="resources/img/tech/python-logo.png" class="img-fluid" alt="Python">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 Language-n-Framework">
+                    <div class="gal-detail thumb">
+                        <a href="resources/img/tech/c-prog.png" class="image-popup" title="C Programming">
+                            <img src="resources/img/tech/c-prog.png" class="img-fluid" alt="C Programming">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 Language-n-Framework">
+                    <div class="gal-detail thumb">
+                        <a href="resources/img/tech/fortran.png" class="image-popup" title="Fortran">
+                            <img src="resources/img/tech/fortran.png" class="img-fluid" alt="Fortran">
                         </a>
                     </div>
                 </div><!-- single gallery item-->
@@ -433,6 +451,42 @@
                     <div class="gal-detail thumb">
                         <a href="resources/img/tech/aws.png" class="image-popup" title="Amazon Web Services">
                             <img src="resources/img/tech/aws.png" class="img-fluid" alt="Amazon Web Services">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 Tools">
+                    <div class="gal-detail thumb">
+                        <a href="resources/img/tech/vi.jpg" class="image-popup" title="Vi: Command Line Text Editor">
+                            <img src="resources/img/tech/vi.jpg" class="img-fluid" alt="Vi: Command Line Text Editor">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 Tools">
+                    <div class="gal-detail thumb">
+                        <a href="resources/img/tech/vim.jpg" class="image-popup" title="Vim: Command Line Text Editor">
+                            <img src="resources/img/tech/vim.jpg" class="img-fluid" alt="Vim: Command Line Text Editor">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 Tools">
+                    <div class="gal-detail thumb">
+                        <a href="resources/img/tech/code-blocks.jpg" class="image-popup" title="Code Blocks">
+                            <img src="resources/img/tech/code-blocks.jpg" class="img-fluid" alt="Code Blocks">
+                        </a>
+                    </div>
+                </div><!-- single gallery item-->
+
+                <!-- single gallery item-->
+                <div class="col-4 col-md-3 col-lg-2 col-xl-2 Tools">
+                    <div class="gal-detail thumb">
+                        <a href="resources/img/tech/vs-code.jpg" class="image-popup" title="Visual Studio Code">
+                            <img src="resources/img/tech/vs-code.jpg" class="img-fluid" alt="Visual Studio Code">
                         </a>
                     </div>
                 </div><!-- single gallery item-->
