resume updated, about updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" href="./resources/img/an-amin.jpg">
     <title>Hello World...</title>
-    <meta name="description" content="I am Aminul Islam, a Full Stack Web Developer.">
+    <meta name="description" content="I am Aminul Islam, a Programmer & Full Stack Web Developer.">
     <meta name="keywords" content="hello world, web, developer, bangladesh, portfolio, aminul, islam">
 
     <meta name="robots" content="">
@@ -147,7 +147,7 @@
 				<img id="my-thumb" class="rounded-circle" src="./resources/img/amin.png" alt="Aminul Islam">
 				<h1 class="display-4 font-consolas">{Hello world}</h1>
 				<p class="lead font-consolas">
-                    I am <i>Aminul Islam</i>, a Full-Stack-Web-Developer currently living in Dhaka, Bangladesh.
+                    I am <i>Aminul Islam</i>, a Programmer & Full Stack Web Developer currently living in Dhaka, Bangladesh.
                 </p>
 				<hr class="my-4">
                 <p>
