yandex to outlook

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                 </div>
                 <div class="col-md-3">
 
-                    <a target="_blank" href="mailto:hello-amin@yandex.com" class="btn btn-block btn-outline-dark btn-social">
+                    <a target="_blank" href="mailto:hello-amin@outlook.com" class="btn btn-block btn-outline-dark btn-social">
                         Send me an <i class="fa fa-envelope-o fa-lg"></i>
                     </a>
                     <a target="_blank" href="https://m.me/sysamin" class="btn btn-block btn-outline-dark btn-social">
