--- a/index.html
+++ b/index.html
@@ -754,6 +754,9 @@
                 </div>
                 <div class="col-md-3">
 
+                    <a target="_blank" href="skype:an.aaminn" class="btn btn-block btn-outline-dark btn-social">
+                        Call me from <i class="fa fa-skype fa-lg"></i>
+                    </a>
                     <a target="_blank" href="mailto:hello-amin@outlook.com" class="btn btn-block btn-outline-dark btn-social">
                         Send me an <i class="fa fa-envelope-o fa-lg"></i>
                     </a>
