project link updated

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 	                        <div class="row-fluid">
 	                            <img 
                                     alt="Twaiq" 
-                                    data="http://sheypoor.welderking.com" 
+                                    data="https://www.twaiq.com" 
                                     data-desc="Twaiq is a free classified ad posting website for Arabic speaking people." 
                                     class="img-responsive" src="resources/img/projects/twaiq.png" 
                                 />
